--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>h5</title>
+    <style>
+    html,body{
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+
+
+}
+    </style>
+    <script>
+        document.querySelector('html').style.fontSize = window.screen.width/20+'px';
+        
+        window.onresize = function(){
+            document.querySelector('html').style.fontSize = window.screen.width/20+'px';
+        }
+    </script>
   </head>
   <body>
     <div id="app"></div>
