--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
 }
+a{text-decoration:none}
     </style>
     <script>
         document.querySelector('html').style.fontSize = window.screen.width/20+'px';
